--- a/themes/anzhiyu/layout/includes/loading/index.pug
+++ b/themes/anzhiyu/layout/includes/loading/index.pug
@@ -3,5 +3,6 @@ if theme.preloader.source === 1
 else if theme.preloader.source === 2
   include ./pace.pug
 else
-  include ./fullpage-loading.pug
+  //- include ./fullpage-loading.pug
   include ./pace.pug
+  include ./loader.pug
