feat: 修改blog title

--- a/themes/anzhiyu/layout/includes/header/nav.pug
+++ b/themes/anzhiyu/layout/includes/header/nav.pug
@@ -15,7 +15,9 @@ nav#nav
                       img.back-menu-item-icon(src=item.icon alt=item.name)
                       span.back-menu-item-text= item.name
       a#site-name(href=url_for('/') accesskey="h")
+        span #[=config.titlePre] 
         .title #[=config.title]
+        span #[=config.titleSuf] 
         i.anzhiyufont.anzhiyu-icon-house-chimney
       if (theme.nav.clock)
         !=partial('includes/anzhiyu/clock', {}, {cache: true})
