--- a/themes/anzhiyu/source/css/_layout/nav.styl
+++ b/themes/anzhiyu/source/css/_layout/nav.styl
@@ -584,6 +584,14 @@
   font-size: 1rem
   opacity 0
 
+#blog_name #site-name span
+  color: #FFC300
+  font-size: 1.2rem;
+  line-height: 2rem;
+  font-weight: bold;
+  transition 0.3s
+  letter-spacing normal
+
 #blog_name #site-name:hover .title
   opacity 0
 
@@ -591,7 +599,6 @@
   transition 0.3s
   letter-spacing normal
   font-size: 1.2rem;
-  padding: 0 5px;
   line-height: 2rem;
   transition: color 0s;
 
